<resources>
    <string name="app_name">PecDeck</string>
    <string name="pushups">Tap the card to start!</string>
    <string name="time">Good luck!</string>
    <string name="seconds">s</string>
    <string name="joker">1 min rest!</string>
    <string name="rest">Rest!</string>
    <string name="go">Go!</string>
    <string name="customize">Customize Workout</string>
    <string name="customizeCondensed">Customize</string>
    <string name="reset">Reset Deck</string>
    <string name="resetCondensed">Reset</string>
    <string name="settings">Settings</string>
    <string name="newDeck">New Deck!</string>
    <string name="total">Total Push-ups:</string>
    <string name="resetP">Reset Total Push-ups</string>
    <string name="spadesHint">Spades:</string>
    <string name="heartsHint">Hearts:</string>
    <string name="diamondsHint">Diamonds:</string>
    <string name="clubsHint">Clubs:</string>
    <string name="spades">Spades</string>
    <string name="hearts">Hearts</string>
    <string name="diamonds">Diamonds</string>
    <string name="clubs">Clubs</string>
    <string name="enter_workout_spades">Enter Workout for Spades</string>
    <string name="enter_workout_hearts">Enter Workout for Hearts</string>
    <string name="enter_workout_diamonds">Enter Workout for Diamonds</string>
    <string name="enter_workout_clubs">Enter Workout for Clubs</string>
    <string name="submit">Submit</string>
    <string name="customIntro">Customize the workout for each suit!</string>
    <string name="defaultSettings">Default Settings</string>
    <string name="congrats">Congratulations! You finished the deck!</string>

</resources>
