<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300sp"
    android:layout_height="400sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp">
    <TextView
        android:id="@+id/introC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customIntro"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spadesHint"
        android:layout_marginTop="10sp" />
    <EditText
        android:id="@+id/customSpades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_workout_spades"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heartsHint"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/customHearts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_workout_hearts"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diamondsHint"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/customDiamonds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_workout_diamonds"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clubsHint"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/customClubs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_workout_clubs"
        android:inputType="text"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:onClick="submitClick"/>


</LinearLayout>